--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,7 @@ body {
 
 .box {
   background-color: var(--bgColor-20per);
-  width: 30%;
+  width: 38%;
   height: 83vh;
   border-radius: 10px;
   transition: all 0.5s;
@@ -137,9 +137,9 @@ body {
   z-index: 3;
 }
 
-.box:nth-of-type(2) {
+/* .box:nth-of-type(2) {
   width: 35%;
-}
+} */
 
 .movielist {
   display: flex;
@@ -163,7 +163,7 @@ body {
 }
 
 .movieListDiv > img {
-  width: 5vw;
+  height: 20vh;
   border-radius: 5px;
 }
 
@@ -224,6 +224,7 @@ body {
     flex-direction: column;
     justify-content: center;
     padding: 0;
+    padding-bottom: 5px;
   }
   .navbar > li:nth-of-type(2) {
     flex-direction: column;
@@ -381,7 +382,7 @@ body {
   justify-content: center;
 }
 
-.back {
+.defautBtn {
   position: absolute;
   font-size: 25px;
   background-color: var(--primarytextColor);
@@ -390,12 +391,28 @@ body {
   padding: 5px 8px;
 }
 
-.back:active {
+.defautBtn:active {
   box-shadow: inset 0px 12px 25px 5px rgba(0, 0, 0, 0.4);
 }
 
-.back:hover {
+.defautBtn:hover {
   cursor: pointer;
+}
+
+.trailerCloseBtn {
+  color: var(--primarytextColor);
+  transition: all 0.3s;
+  font-size: 1.3em;
+  margin-bottom: 5px;
+}
+
+.trailerCloseBtn:active {
+  box-shadow: inset 0px 12px 25px 5px rgba(0, 0, 0, 0.4);
+}
+
+.trailerCloseBtn:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 .rateSection {
@@ -447,7 +464,7 @@ body {
 }
 
 .watchedPoster {
-  width: 3vw;
+  height: 10vh;
   margin: 5px;
 }
 
@@ -465,5 +482,40 @@ body {
 }
 
 .trailerContainer {
-  position: relative;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+
+.trailerBox {
+  position: absolute;
+  width: 40vw;
+  left: 30%;
+  top: 25%;
+}
+
+.trailerBox {
+  text-align: end;
+}
+
+@media (max-width: 1025px) {
+  .container {
+    position: relative;
+    flex-direction: column;
+    width: 100%;
+  }
+  .box {
+    width: 100%;
+    overflow: none;
+  }
+  .small:nth-of-type(1) {
+    display: none;
+  }
+}
+
+.ErrDiv {
+  display: flex;
+  height: 50%;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
 }
