--- a/src/index.css
+++ b/src/index.css
@@ -529,55 +529,88 @@ body {
 }
 
 .topMoviesBubble:nth-of-type(1) {
-  left: 30%;
-  top: 75%;
+  left: 37%;
+  top: 93.2%;
   width: 120px;
   height: 120px;
   opacity: 0;
+  z-index: 8;
 }
 .topMoviesBubble:nth-of-type(2) {
   left: 10%;
-  top: 90%;
+  top: 95.7%;
   background-color: #731d1d;
-  width: 20px;
-  height: 20px;
+  width: 100px;
+  height: 100px;
   opacity: 0;
+  z-index: 7;
 }
 .topMoviesBubble:nth-of-type(3) {
-  left: 80%;
-  top: 70%;
+  left: 82%;
+  top: 85.4%;
   background-color: #731d1d;
   width: 50px;
   height: 50px;
   opacity: 0;
+  z-index: 6;
 }
 .topMoviesBubble:nth-of-type(4) {
-  left: 61%;
-  top: 88%;
+  left: 72%;
+  top: 92.5%;
   background-color: #731d1d;
   width: 190px;
   height: 190px;
   opacity: 0;
+  z-index: 5;
 }
 
 .topMoviesBubble:nth-of-type(5) {
-  left: 11%;
-  top: 88%;
+  left: 13%;
+  top: 98.4%;
   background-color: #731d1d;
   width: 90px;
   height: 90px;
   opacity: 0;
+  z-index: 4;
 }
 
 .topMoviesBubble:nth-of-type(6) {
+  left: 49%;
+  top: 91.2%;
+  background-color: #731d1d;
+  width: 170px;
+  height: 170px;
+  opacity: 0;
+  z-index: 3;
+}
+
+.topMoviesBubble:nth-of-type(7) {
   left: 88%;
-  top: 98%;
+  top: 93.9%;
   background-color: #731d1d;
   width: 90px;
   height: 90px;
   opacity: 0;
+  z-index: 2;
+}
+
+.topMoviesBubble:nth-of-type(8) {
+  left: 65.67%;
+  top: 94.6%;
+  background-color: #731d1d;
+  width: 210px;
+  height: 210px;
+  opacity: 0;
+  z-index: 1;
 }
 
 .small:nth-last-of-type(2) {
   overflow: hidden;
+}
+
+.bubbleImg {
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+  object-fit: cover;
 }
