--- a/src/index.css
+++ b/src/index.css
@@ -525,6 +525,9 @@ body {
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
+  -webkit-box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.98);
+  -moz-box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.98);
+  box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.98);
   opacity: 1;
 }
 
@@ -613,4 +616,11 @@ body {
   width: 100%;
   border-radius: inherit;
   object-fit: cover;
+  transition: all 0.5s;
+}
+
+.bubbleImg:hover {
+  -webkit-box-shadow: 0px 0px 20px 1px rgba(231, 166, 26, 0.47);
+  -moz-box-shadow: 0px 0px 20px 1px rgba(231, 166, 26, 0.47);
+  box-shadow: 0px 0px 20px 1px rgba(231, 166, 26, 0.47);
 }
