--- a/src/index.css
+++ b/src/index.css
@@ -449,38 +449,6 @@ body {
   transform: translateY(500px);
 } */
 
-.watchedMovie {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 15px;
-  align-items: center;
-  font-size: 1.1rem;
-  transition: all 0.5s;
-  border-radius: 5px;
-}
-
-.watchedMovie:hover {
-  transform: scale(1.02);
-}
-
-.watchedPoster {
-  height: 10vh;
-  margin: 5px;
-}
-
-.deleteBtn img {
-  width: 2em;
-}
-
-.deleteBtn {
-  transition: all 0.3s;
-}
-
-.deleteBtn:hover {
-  cursor: pointer;
-  transform: translateY(-3px);
-}
-
 .trailerContainer {
   filter: blur(8px);
   -webkit-filter: blur(8px);
@@ -618,3 +586,45 @@ body {
   box-shadow: 0px 0px 20px 1px rgba(231, 166, 26, 0.47);
 }
  */
+
+.watchedMovie {
+  display: flex;
+  margin-top: 15px;
+  align-items: center;
+  font-size: 1.1rem;
+  transition: all 0.5s;
+  border-radius: 5px;
+  justify-content: space-around;
+}
+
+.watchedMovie:hover {
+  transform: scale(1.02);
+}
+
+.watchedPoster {
+  height: 12vh;
+  margin: 5px;
+}
+
+.deleteBtn img {
+  width: 2em;
+}
+
+.deleteBtn {
+  transition: all 0.3s;
+}
+
+.deleteBtn:hover {
+  cursor: pointer;
+  transform: translateY(-3px);
+}
+
+.watchedStats {
+  width: 80%;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
