--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
 :root {
-  --primaryColor: #a52a2a;
+  --primaryColor: #e9c87425;
   --primaryColorLighten: #cf6f6f;
   --primaryColorDarker: #731d1d;
   --primarytextColor: #dee2e6;
@@ -49,7 +49,7 @@ body {
   left: 0;
   right: 0;
   display: flex;
-  background-color: #731d1d;
+  background-color: #e9c87425;
   border-radius: 10px;
   height: 5rem;
   transition: all 0.3s;
@@ -359,7 +359,7 @@ body {
   align-items: center;
   justify-content: center;
   color: var(--primarytextColor);
-  background-color: #731d1d;
+  background-color: var(--primaryColor);
   width: 100px;
   height: 40px;
   border-radius: 5px;
@@ -367,10 +367,12 @@ body {
     inset 0px -3px 6px -2px rgba(0, 0, 0, 0.3);
   padding-left: 50px;
   padding-right: 50px;
+  transition: 0.5s all;
 }
 
 .trailerBtn:hover {
   cursor: pointer;
+  transform: translateY(-1px);
 }
 
 .trailerBtn:active {
@@ -423,7 +425,7 @@ body {
 .addBtn {
   margin-top: 10px;
   color: var(--primarytextColor);
-  background-color: #731d1d;
+  background-color: var(--primaryColor);
   width: 50px;
   height: 40px;
   border-radius: 5px;
@@ -432,10 +434,12 @@ body {
   padding-left: 50px;
   padding-right: 50px;
   text-align: center;
+  transition: 0.5s all;
 }
 
 .addBtn:hover {
   cursor: pointer;
+  transform: translateY(-1px);
 }
 
 .addBtn:active {
@@ -489,14 +493,11 @@ body {
 }
 
 .topMoviesBubble {
-  background-color: #731d1d;
+  background-color: var(--primaryColor);
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
   opacity: 1;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .topMoviesBubble:nth-of-type(1) {
